[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Nadia Haddad"}]
name = "fluidyne"
version = "2.0.1"
description = "Pipe flow: Reynolds, Colebrook-White friction factor and Darcy head loss."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
]

[tool.setuptools]
packages = ["fluidyne"]
